About and Contact Pages Updated

--- a/Pages/Aboutus.html
+++ b/Pages/Aboutus.html
@@ -60,7 +60,9 @@
     </main>
 
     <footer class="bg-gray-900 text-gray-500 text-center p-4 mt-6">
+        <a href="./../index.html"><p class="my-3 py-2 px-3 bg-blue-600 hover:bg-blue-400 rounded-lg text-white font-semibold">Home</p></a>
         <p>Made with 🩷 by Sourav Chhimpa. &copy; 2024 Veggie Smart. All rights reserved.</p>
+
     </footer>
 </body>
 
