--- a/Pages/contactus.html
+++ b/Pages/contactus.html
@@ -16,7 +16,12 @@
 
 <body class="dark-mode">
     <header class="bg-gray-900 text-white p-4">
-            <h1 class="text-3xl font-bold text-center">Veggie Smart</h1>
+        <div class="container mx-auto flex justify-between items-center">
+            <h1 class="text-3xl font-bold">Veggie Smart</h1>
+            <nav>
+                <a href="/" class="text-gray-300 hover:text-white px-3">Home</a>
+            </nav>
+        </div>
     </header>
 
     <main class="container mx-auto sm:p-6 p-0">
