--- a/AddtionalFeatures/ResumeBuilder.html
+++ b/AddtionalFeatures/ResumeBuilder.html
@@ -3,9 +3,130 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>Resume Builder</title>
+    <style>
+        body {
+    font-family: Arial, sans-serif;
+    background-color: #f0f0f0;
+    margin: 0;
+    padding: 0;
+}
+
+.container {
+    max-width: 800px;
+    margin: 20px auto;
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+h1, h2 {
+    text-align: center;
+}
+
+form {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
+}
+
+label {
+    font-weight: bold;
+}
+
+textarea, input[type="text"], input[type="email"], input[type="tel"], input[type="file"] {
+    width: calc(100% - 12px);
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+textarea {
+    resize: vertical;
+}
+
+#skillsContainer {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
+
+.addSkillButton {
+    padding: 8px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+#preview {
+    margin-top: 20px;
+    border-top: 1px solid #ccc;
+    padding-top: 20px;
+    display: none;
+}
+
+#previewContent {
+    border: 1px solid #ccc;
+    padding: 20px;
+    background-color: #f9f9f9;
+    border-radius: 4px;
+    overflow: hidden;
+}
+
+.preview h2 {
+    text-align: center;
+}
+
+.preview img {
+    max-width: 100px;
+    border-radius: 50%;
+    margin-bottom: 10px;
+}
+
+    </style>
 </head>
 <body>
-    
+    <div class="container">
+        <h1>Resume Builder</h1>
+        <form id="resumeForm">
+            <label for="fullName">Full Name:</label>
+            <input type="text" id="fullName" required>
+
+            <label for="email">Email:</label>
+            <input type="email" id="email" required>
+
+            <label for="phone">Phone:</label>
+            <input type="tel" id="phone" required>
+
+            <label for="address">Address:</label>
+            <input type="text" id="address" required>
+
+            <label for="summary">Summary:</label>
+            <textarea id="summary" rows="4" required></textarea>
+
+            <label for="skills">Skills:</label>
+            <div id="skillsContainer">
+                <input type="text" class="skillInput" required>
+                <button type="button" class="addSkillButton">Add More Skills</button>
+            </div>
+
+            <label for="uploadImage">Upload Picture:</label>
+            <input type="file" id="uploadImage">
+
+            <button type="button" onclick="previewResume()">Preview</button>
+            <a id="downloadLink" href="#" download="resume.pdf" style="display: none;">Download</a>
+        </form>
+
+        <div id="preview" class="preview">
+            <h2>Preview</h2>
+            <div id="previewContent"></div>
+        </div>
+    </div>
+
+    <script src="ResumeBuilder.js"></script>
 </body>
 </html>
