QR Code Generator linked to the the index page

--- a/index.html
+++ b/index.html
@@ -53,6 +53,22 @@
             </a>
         </header>
         <div class="calculator">
+            <h2>New Featured</h2>
+            <div class="btn-container">
+                <a href="./AddtionalFeatures/qrcodegen.html">
+                    <div class="calbtn">
+                        <div>
+                            <img src="https://img.icons8.com/fluency/500/qr-code.png" alt="Calculator" loading="lazy">
+                        </div>
+                        <div class="btnsecondsection">
+                            <span class="btn-tagname">Free</span>
+                            <h4 class="btn-name">QR Code Generator</h4>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
+        <div class="calculator">
             <h2>Market Pro Calculators</h2>
             <div class="btn-container">
                 <a href="./MarketCal/Calculate-Total-Price.html">
