share.js beta version added

--- a/index.html
+++ b/index.html
@@ -224,5 +224,6 @@
     </footer>
     <script src="./scripts/scripts.js"></script>
     <script src="./scripts/linksadd.js"></script>
+    <script src="./scripts/share.js"></script>
 </body>
 </html>
