--- a/AddtionalFeatures/qrcodegen.html
+++ b/AddtionalFeatures/qrcodegen.html
@@ -103,8 +103,7 @@
     <script src="https://cdn.jsdelivr.net/npm/js-pdf@1.5.3"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.0.0-alpha.12/html2canvas.min.js"></script>
     <script src="qrcodegen.js"></script>
-    <script src="./../scripts/share.js"></script>
-    <!-- <script src="./../scripts/footer.js"></script> -->
+    <script src="./../scripts/footer.js"></script>
 </body>
 
 </html>
