Fontend ui change "index"

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div> -->
     <div class="container">
         <header class="header">
-            <h1 style="display: flex; justify-content: center; align-items: center;"><span><img style="width: 40px;" src="https://img.icons8.com/color/48/calculator--v1.png" alt="Logo" loading="lazy"></span> <span class="title">Veggie Smart</span></h1>
+            <h1 style="display: flex; justify-content: center; align-items: center;"><span><img style="width: 45px; margin-top: 20px;" src="https://img.icons8.com/color/48/calculator--v1.png" alt="Logo" loading="lazy"></span> <span class="title">Veggie Smart</span></h1>
             <a href="https://bit.ly/Souravhere" target="_blank">
                 <div>
                     <dfn> <abbr title="Know About Sourav Chhimpa">
