--- a/AddtionalFeatures/qrcodegen.html
+++ b/AddtionalFeatures/qrcodegen.html
@@ -104,6 +104,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.0.0-alpha.12/html2canvas.min.js"></script>
     <script src="qrcodegen.js"></script>
     <script src="./../scripts/footer.js"></script>
+    <script src="./../scripts/Breadcrumb.js"></script>
 </body>
 
 </html>
