Receipt Generator Second Beta version Relesed

--- a/AddtionalFeatures/ReceiptGenerator.html
+++ b/AddtionalFeatures/ReceiptGenerator.html
@@ -23,12 +23,32 @@
                 <input type="text" id="shop-name" class="w-full p-2 bg-gray-700 border border-gray-600 rounded" placeholder="Enter shop name">
             </div>
             <div class="mb-4">
+                <label class="block mb-2">Address</label>
+                <input type="text" id="address" class="w-full p-2 bg-gray-700 border border-gray-600 rounded" placeholder="Enter address">
+            </div>
+            <div class="mb-4">
+                <label class="block mb-2">Email</label>
+                <input type="email" id="email" class="w-full p-2 bg-gray-700 border border-gray-600 rounded" placeholder="Enter email">
+            </div>
+            <div class="mb-4">
                 <label class="block mb-2">Contact Info</label>
                 <input type="text" id="contact-info" class="w-full p-2 bg-gray-700 border border-gray-600 rounded" placeholder="Enter contact info">
             </div>
             <div class="mb-4">
+                <label class="block mb-2">Owner Name</label>
+                <input type="text" id="owner-name" class="w-full p-2 bg-gray-700 border border-gray-600 rounded" placeholder="Enter owner name">
+            </div>
+            <div class="mb-4">
                 <label class="block mb-2">Logo</label>
                 <input type="file" id="logo" class="w-full p-2 bg-gray-700 border border-gray-600 rounded">
+            </div>
+        </div>
+
+        <div class="bg-gray-800 p-6 rounded shadow-lg mb-8">
+            <h2 class="text-xl font-semibold mb-4">Customer Details</h2>
+            <div class="mb-4">
+                <label class="block mb-2">Customer Name</label>
+                <input type="text" id="customer-name" class="w-full p-2 bg-gray-700 border border-gray-600 rounded" placeholder="Enter customer name">
             </div>
         </div>
 
