Receipt Generator Beta version relesed linked to main page

--- a/index.html
+++ b/index.html
@@ -55,6 +55,17 @@
         <div class="calculator">
             <h2>New Featured</h2>
             <div class="btn-container">
+                <a href="./AddtionalFeatures/ReceiptGenerator.html">
+                    <div class="calbtn">
+                        <div>
+                            <img src="https://img.icons8.com/color/500/receipt.png" alt="Calculator" loading="lazy">
+                        </div>
+                        <div class="btnsecondsection">
+                            <span class="btn-tagname">Free</span>
+                            <h4 class="btn-name">Receipt Generator</h4>
+                        </div>
+                    </div>
+                </a>
                 <a href="./AddtionalFeatures/qrcodegen.html">
                     <div class="calbtn">
                         <div>
