Receipt Generator Bug fixed

--- a/AddtionalFeatures/ReceiptGenerator.html
+++ b/AddtionalFeatures/ReceiptGenerator.html
@@ -73,7 +73,8 @@
 
         <button id="generate-pdf-btn" class="bg-green-600 p-2 rounded">Download PDF</button>
     </div>
-
+    <footer id="footer"></footer>
     <script src="ReceiptGenerator.js"></script>
+    <script src="./../scripts/footer.js"></script>
 </body>
 </html>
